--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -6,6 +6,7 @@
         <strong>Name:</strong>
         <%= @cocktail.name %>
       </p>
+      <%= cl_image_tag @article.photo, height: 300, width: 400, crop: :fill %>
 
       <%= link_to 'All cocktails', cocktails_path %>
     </div>
